# blazing-encoders

./: .gitignore  Cargo.toml  README.md  benchmark_blazing_encoders.py  notes.md  pyproject.toml  test_blazing_encoders.py
.cargo/: config
.github/workflows/: rust.yml
benches/: benchmark.rs
examples/: benchmark_blazing_encoders.py  example.py
src/: lib.rs  main.rs  stats.rs  target_encoder.rs  utils.rs
