[package]
name = "blazing_encoders"
version = "0.1.0"
authors = ["Kirill Dubovikov <dubovikov.kirill@gmail.com>"]
edition = "2018"

[lib]
name = "blazing_encoders"
crate-type = [
"cdylib",
"rlib"
]
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
approx = "0.3.2"
rayon = "1.3.0"
ndarray = {version = "0.13.0", features=["rayon"]}
ordered-float = "1.0.2"
numpy = "0.8"
pyo3 = "0.9"
num-traits = "0.2.11"
itertools = "0.9.0"
rand = "0.7.3"
#intel-mkl-sys = "0.1.0"
fnv = "1.0.6"

#[profile.dev]
#opt-level = 3
