[package]
name = "blazing_encoders"
version = "0.1.0"
authors = ["Kirill Dubovikov <dubovikov.kirill@gmail.com>"]
edition = "2018"

[lib]
name = "blazing_encoders"
crate-type = [
"cdylib"
]
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
approx = "0.5.0"
rayon = "1.3.0"
ndarray = {version = "0.15.3", features=["rayon"]}
ordered-float = "2.5.1"
numpy = "0.13.1"
pyo3 = { version = "0.13.1", features=["extension-module"] }
num-traits = "0.2.11"
itertools = "0.10.1"
rand = "0.8.4"
#intel-mkl-sys = "0.1.0"
fnv = "1.0.6"

#[profile.dev]
#opt-level = 3
