[build-system]
requires = ["maturin", "cffi"]
build-backend = "maturin"

[tool.maturin]
bindings = "cffi"
manylinux = "off"

[package.metadata.maturin]
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3 :: Only"
]