[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[tool.maturin]
compatibility = "Linux"

[package.metadata.maturin]
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3 :: Only"
]